# find-closed-references

./: .pre-commit-config.yaml  Makefile  README.md  find-closed-references.code-workspace  go.mod  main.go
old/: .flake8  .pre-commit-config.yaml  .refsignore  Makefile  README.md  pyproject.toml
old/find_closed_references/: _clients.py  _ignores.py  _ref.py  main.py  search.py
old/tests/: test_ignores.py  test_scan.py
old/tests/fixtures/: .refsignore  __init__.py  file.md
refs/: search.go  search_test.go
