[tool.poetry]
name = "find-closed-references"
version = "0.1.0"
description = ""
authors = ["Jooola"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "find_closed_references"}]

[tool.poetry.scripts]
find-closed-references = 'find_closed_references.main:main'

[tool.poetry.dependencies]
python = "^3.9"
pathspec = "^0.10.2"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
coverage = "^6.5.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^0.991"
pylint = "^2.15.7"
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
